--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ readme = "README.md"
 packages = [{include = "gendiff"}]
 
 [tool.poetry.dependencies]
-python = "^3.8.1"
+python = ">=3.8.1,<4.0"
 
 [tool.poetry.scripts]
 gendiff = "gendiff.scripts.gendiff:main"
