--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ packages = [{include = "gendiff"}]
 [tool.poetry.dependencies]
 python = ">=3.9.0,<4.0"
 pyyaml = "^6.0.1"
+requests = "^2.31.0"
 
 [tool.poetry.scripts]
 gendiff = "gendiff.scripts.gendiff:main"
